# io-extras

./: CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  README.md  build.rs  furjrfjdjfjdjdhdhffjtjrjrjdj.md
.github/workflows/: main.yml
examples/: hello.rs
src/: borrowed.rs  grip.rs  lib.rs  owned.rs  owns_raw.rs  posish.rs  raw.rs  raw_handle_or_socket.rs  read_write.rs  unsafe_handle.rs
src/os/: mod.rs  posish.rs  windows.rs  windows_stdio.rs
src/os/windows/: mod.rs  stdio.rs  traits.rs  types.rs
tests/: api.rs  os_pipe.rs  tcp_stream.rs
