[package]
name = "io-extras"
version = "0.13.1"
description = "File/socket handle/descriptor utilities"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["api", "io", "stream"]
categories = ["os", "rust-patterns"]
repository = "https://github.com/sunfishcode/io-extras"
exclude = ["/.github"]

[dependencies]
io-lifetimes = { version = "0.5.1", default-features = false }

# Optionally depend on async-std to implement traits for its types.
#
# Enable the "unstable" feature so that we can implement traits for
# `process::ChildStdin` etc.
async-std = { version = "1.9.0", features = ["unstable"], optional = true }
# Optionally depend on tokio to implement traits for its types.
tokio = { version = "1.6.0", features = ["io-std", "fs", "net", "process"], optional = true }
# Optionally depend on os_pipe to implement traits for its types.
os_pipe = { version = "1.0.0", optional = true }
# Optionally depend on socket2 to implement traits for its types.
socket2 = { version = "0.4.0", optional = true }
# Optionally depend on mio to implement traits for its types.
mio = { version = "0.8.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "consoleapi",
    "handleapi",
    "processenv",
    "std",
    "winbase",
    "winerror",
] }

[dev-dependencies]
os_pipe = "1.0.0"

[features]
default = []
use_mio_net = ["mio", "mio/net", "io-lifetimes/mio"]
use_mio_os_ext = ["mio", "mio/os-ext", "io-lifetimes/mio"]
use_async_std = ["async-std", "io-lifetimes/async-std"]
use_tokio = ["tokio", "io-lifetimes/tokio"]
use_socket2 = ["socket2", "io-lifetimes/socket2"]
use_os_pipe = ["os_pipe", "io-lifetimes/os_pipe"]
